--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
                         <div class="submit">
                             <button id="submitbtn" type="submit"
-                                style="background-color: #215426; color: white; padding: 10px 20px; border: none; border-radius: 4px; font-size: 15px; cursor: pointer; font-family: poppins; width: 25%;">
+                                style="background-color: #215426; color: white; padding: 10px 20px; border: none; border-radius: 4px; font-size: 15px; cursor: pointer; font-family: poppins; ">
                                 Submit
                             </button>
                             <p id="contactfooter">*Ready to start your journey? Contact us today to enroll in your first class*</p>
